added some clarity around the need for a forked libpam-fprintd

--- a/_posts/2018-10-14-thinkpad-x1c4.md
+++ b/_posts/2018-10-14-thinkpad-x1c4.md
@@ -21,7 +21,7 @@ Running `sudo tlp-stat` will give you a bunch of info; `sudo tlp-stat -b` is lik
 You can also control the percentage the battery will charge to and the percentage threshold for charging to begin. If you keep your laptop plugged in a lot, you may want to consider setting the charge threshold to 75% and the max charge to 80% to prolong battery life with `sudo tlp setcharge 75 80 BAT0`. If you're planning on needing more juice (e.g. getting on a plane), you can quickly revert to 100% charge with `sudo tlp fullcharge`. tlp docs say it should revert to the 75/80 profile on restart, but that doesn't seem to work for me.
 
 ## Fingerprint Reader
-The fingerprint reader on this model works in Ubuntu, but requires a [forked libpam-fprintd driver from Marco Trevison](https://github.com/3v1n0/libfprint). If you already tried the main libpam-fprintd drive, just make sure you remove it and any PPA's before doing the below.
+The Validity Sensors fingerprint reader on this model [isn't yet supported](https://gitlab.freedesktop.org/libfprint/libfprint/issues/54) by the libpam-fprintd driver, however there is a [forked version from Marco Trevison](https://github.com/3v1n0/libfprint) that gets the job done. If you already tried the main libpam-fprintd driver, just make sure you remove it and any PPA's before doing the below.
 
 ```shell
 sudo add-apt-repository -u ppa:3v1n0/libfprint-vfs0090
