caps in the title

--- a/_posts/2018-10-14-thinkpad-x1c4.md
+++ b/_posts/2018-10-14-thinkpad-x1c4.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "ubuntu on thinkpad x1 carbon 4th gen (2016)"
+title: "Ubuntu 18.04 on a Thinkpad X1 Carbon 4th Gen (2016)"
 date: 2018-10-14
 tags: ubuntu linux thinkpad
 ---
